--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.HIGH_SAMPLING_RATE_SENSORS" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -30,6 +31,10 @@
         <activity
             android:name="com.praktikum.bomoapp.SettingsActivity"
             android:label="Einstellungen" >
+        </activity>
+        <activity
+            android:name="com.praktikum.bomoapp.MapActivity"
+            android:label="Map" >
         </activity>
     </application>
 
