--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:theme="@style/Theme.BoMoApp"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".Activities.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.BoMoApp">
@@ -29,11 +29,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.praktikum.bomoapp.SettingsActivity"
+            android:name="com.praktikum.bomoapp.Activities.SettingsActivity"
             android:label="Einstellungen" >
         </activity>
         <activity
-            android:name="com.praktikum.bomoapp.MapActivity"
+            android:name="com.praktikum.bomoapp.Activities.MapActivity"
             android:label="Map" >
         </activity>
     </application>
