--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,8 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.HIGH_SAMPLING_RATE_SENSORS" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+
 
     <application
         android:allowBackup="true"
@@ -36,6 +38,10 @@
             android:name="com.praktikum.bomoapp.MapActivity"
             android:label="Map" >
         </activity>
+        <service
+            android:name=".ForegroundService"
+            android:enabled="true"
+            android:exported="true" />
     </application>
 
 </manifest>
