--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         android:theme="@style/Theme.BoMoApp"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.BoMoApp">
@@ -31,11 +31,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.praktikum.bomoapp.SettingsActivity"
+            android:name="com.praktikum.bomoapp.activities.SettingsActivity"
             android:label="Einstellungen" >
         </activity>
         <activity
-            android:name="com.praktikum.bomoapp.MapActivity"
+            android:name="com.praktikum.bomoapp.activities.MapActivity"
             android:label="Map" >
         </activity>
         <service
